fixed line spacing

--- a/src/styles/scss/global.scss
+++ b/src/styles/scss/global.scss
@@ -4,6 +4,7 @@
     box-sizing: inherit;
 }
 
+
 a {
     text-decoration:none;
 }
@@ -52,5 +53,6 @@ button {
 }
 
 li {
+    line-height: 1.7 !important;
     list-style-type: none;
 }
